:beetle: fix z-index collision between date and slider (#307)

--- a/src/components/calcite-date/calcite-date.scss
+++ b/src/components/calcite-date/calcite-date.scss
@@ -53,7 +53,7 @@
   transform: translate3d(0, -$baseline, 0);
   transition: all 0.15s ease-in-out;
   pointer-events: none;
-  z-index: 2;
+  z-index: 3;
 }
 
 :host([show-calendar]) {
